--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
         "symfony/runtime": "7.0.*",
+        "symfony/ux-live-component": "*",
         "symfony/ux-twig-component": "*",
         "symfony/webapp-pack": "*",
         "symfony/yaml": "7.0.*"
