--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "symfony/asset-mapper": "7.0.*",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
         "symfony/runtime": "7.0.*",
+        "symfony/stimulus-bundle": "*",
         "symfony/ux-live-component": "*",
         "symfony/ux-twig-component": "*",
         "symfony/webapp-pack": "*",
